k8s/event-bus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: aleksandertapsi/event-bus:latest
          ports:
            - containerPort: 5005
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-service
spec:
  type: NodePort
  selector:
    app: event-bus
  ports:
    - name: event-bus
      protocol: TCP
      port: 5005
      targetPort: 5005
