k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: blog.local
      http:
        paths:
          - path: /posts/create
            pathType: Prefix
            backend:
              service:
                name: posts-service
                port:
                  number: 5000
          - path: /posts/\d+/comments/create
            pathType: ImplementationSpecific
            backend:
              service:
                name: comments-service
                port:
                  number: 5001
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: query-service
                port:
                  number: 5002
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 5173
